<resources>
    <string name="app_name">GB_HM_Calculator_Borisovsky</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_point">.</string>
    <string name="key_x">x</string>
    <string name="key_minus">-</string>
    <string name="key_plus">+</string>
    <string name="key_equal">=</string>
    <string name="key_reset">C</string>
    <string name="key_delete">del</string>
    <string name="key_percent">%</string>
    <string name="key_divide">/</string>
    <string name="theme_1">Theme1</string>
    <string name="theme_2">Theme2</string>
</resources>